--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>REGALO DEL AMIGO INVISIBLE</title>
         <link rel="stylesheet" href="assets/style.css">
     </head>
     <body>
         <h1>Si has llegado aquí, es porque has escaneado un bonito QR del regalo del amigo invisible de <em>Rodrigo</em>.</h1>
 
         <p>No sabía como recordar todo lo que hemos hecho a lo largo de estos años, y aunque esto solo sea un regalo del amigo invisible, me gusta poner muchos detalles, y este es uno de esos detalles del regalo.</p>
-        <p>Tampoco sabía cómo hacer para recodar nuestras fotos, vídeos incluso momentos, por eso mismo, estoy haciendo una página a la que podrás entrar <em>de por vida</em>. Donde podrás recordar todo lo que haya añadido en la página.</p>
+        <p>Tampoco sabía cómo hacer para recordar nuestras fotos, vídeos incluso momentos, por eso mismo, estoy haciendo una página a la que podrás entrar <em>de por vida</em>. Donde podrás recordar todo lo que haya añadido a la página.</p>
         <p>Bueno, voy a parar de escribir textos y textos, y vamos a empezar a ver recordar nuestros momentos.</p>
 
         <img src="assets/img/image1.jpeg">
@@ -29,7 +29,7 @@
         <p class="footer">Segunda foto en casa de DavidCrack, jugando con él al Fortnite, el día de santa rita.</p>
 
         <img src="assets/img/image4.jpeg">
-        <p class="footer">Aquí ya no sale David 🥹, pero si sales con un bocata que te hiciste en su casa, fua, y yo con un kebab.</p>
+        <p class="footer">Aquí ya no sale David 😢, pero si sales con un bocata que te hiciste en su casa, fua, y yo con un kebab.</p>
 
         <img src="assets/img/image3.jpeg">
         <p class="footer">Una foto de esa mismo día, con nuestra botella de legendario y después de echarnos unos dardos en un bar JAJAJAJA.</p>
@@ -56,7 +56,7 @@
         <img src="assets/img/image18.jpeg">
         <img src="assets/img/image19.jpeg">
         <img src="assets/img/image20.jpeg">
-        <p class="footer">Fua, vaya momentos en los que íbamos a casa de Isabel a ver una serie de educación y poníamos Yeah o estrellas satánicas en el baño de Isabel.</p>
+        <p class="footer">Fua, vaya momentos en los que íbamos a casa de Isabel a ver una serie de educación 🔞, y poníamos Yeah o estrellas satánicas en su baño.</p>
 
         <img src="assets/img/image16.jpeg">
         <img src="assets/img/image10.jpeg">
@@ -79,7 +79,7 @@
 
         <video src="assets/img/Vídeo.MOV" controls></video>
 
-        <br><br><br><p>Espero que hayas echado unas risas y hayas recordado momentos que hemos pasado durante estos años (aunque solo salgan fotos de 2022 y 2023, antes no hacíamos na y menos fotos).</p><br>
-        <h3>Mi próximo regalo pa ti, Rodrigo, será el de tus 18 años. Préparate para ese, que va a ser lo más increíble que hayas visto en tu vida FUA.<br><br>Literal esto ha sido un pequeño avance pal regalo de los 18, vas a flipar bro. <br><br>Pero para finalizar ya, a disfrutar de tu regalo y espero que pases más momentos juntos.</h3>
+        <br><br><br><p>Espero que te hayas echado unas risas y hayas recordado momentos que hemos pasado durante estos años (aunque solo salgan fotos de 2022 y 2023, antes no hacíamos na y menos fotos).</p><br>
+        <h3>Mi próximo regalo pa ti, Rodrigo, será el de tus 18 años. Préparate para ese, que va a ser lo más increíble que hayas visto en tu vida FUA.<br><br>Literal esto ha sido un pequeño avance pal regalo de los 18, vas a flipar bro.<br><br>Pero para finalizar ya, a disfrutar de tu regalo y espero que pases más momentos juntos.</h3>
     </body>
 </html>
