--- a/index.html
+++ b/index.html
@@ -65,7 +65,16 @@
         <img src="assets/img/image2.jpeg">
         <p class="footer">San Isidro, con el móvil de Cloe, simplemente increíble. <em><b>PD:</b> Súbele el brillo al móvil para ver a Alex y a Cloe arriba JAJAJAJAJ.</em></p>
 
-        <p>Se va acercando el final 😭😭😭😭.</p>
+        <h2>RONDA DE BEREALs ALEATORIOSSSSS</h2>
+        <img src="assets/img/image27.jpeg">
+        <img src="assets/img/image26.jpeg">
+        <img src="assets/img/image30.jpeg">
+        <p class="footer">Nuestra primera vez en la novi 😈🔞, eso sí, vayas caretosss</p>
+        <img src="assets/img/image29.jpeg">
+        <img src="assets/img/image28.jpeg">
+
+
+        <h1>Se va acercando el final 😭😭😭😭.</h1>
         <img src="assets/img/image0.jpeg">
         <p class="footer">FUA, las ferias de Belmonte.</p>
 
